# bacpypes3-stubs

./: README.md  pyproject.toml
bacpypes3/: __main__.pyi  app.pyi  basetypes.pyi  comm.pyi  constructeddata.pyi  debugging.pyi  errors.pyi  pdu.pyi  primitivedata.pyi
bacpypes3-stubs/: __init__.pyi  __main__.pyi  apdu.pyi  app.pyi  appservice.pyi  argparse.pyi  basetypes.pyi  cmd.pyi  console.pyi  constructeddata.pyi  netservice.pyi  npdu.pyi  object.pyi  pdu.pyi  primitivedata.pyi  settings.pyi  vendor.pyi
bacpypes3-stubs/ipv4/: __init__.pyi  app.pyi  bvll.pyi  link.pyi  service.pyi
bacpypes3-stubs/ipv6/: __init__.pyi
bacpypes3-stubs/json/: util.pyi
bacpypes3-stubs/lib/: batchread.pyi
bacpypes3-stubs/local/: analog.pyi  binary.pyi  cmd.pyi  cov.pyi  device.pyi  event.pyi  fault.pyi  networkport.pyi  object.pyi  schedule.pyi
bacpypes3-stubs/rdf/: __init__.pyi  core.pyi  util.pyi
bacpypes3-stubs/sc/: bvll.pyi  service.pyi
bacpypes3-stubs/service/: cov.pyi  device.pyi  object.pyi
bacpypes3-stubs/vlan/: __init__.pyi  link.pyi
bacpypes3/ipv4/: service.pyi
bacpypes3/ipv6/: __init__.pyi
bacpypes3/json/: __init__.pyi  util.pyi
bacpypes3/lib/: batchread.pyi
bacpypes3/local/: __init__.pyi  analog.pyi  binary.pyi  event.pyi  networkport.pyi  schedule.pyi
bacpypes3/rdf/: core.pyi
bacpypes3/sc/: __init__.pyi
bacpypes3/service/: cov.pyi  device.pyi
bacpypes3/vlan/: link.pyi
